--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".QuestOverview"
+            android:name="com.example.hanna.piquest.QuestOverview"
             android:label="@string/title_activity_quest_overivew" >
         </activity>
         <activity
             android:name="com.example.hanna.piquest.GameActivity"
             android:label="@string/title_activity_game" >
+        </activity>
+        <activity
+            android:name="com.example.hanna.piquest.MainActivity2"
+            android:label="@string/title_activity_main_activity2" >
         </activity>
     </application>
 
